Refine pom test configuration
Resolved the class path not found by the failsafe plugin.

Updated the Travis CI pipeline to execute the integration tests
properly.

Updated h2 embedded database initialization though JPA database
action. Updated jpa database action test validation

Updated ActiveMQ pom configuration.